Version 0.5pre1 -- DEVELOPMENT
------------------------------
- Rewrote MIME support from scratch, optomizing it an unbelievable amount
- Added support for message highlighting
- Moved Address and Send buttons on Compose form for easier access 
- Added Polish translation from Lukasz Klimek <casa@LO.Pila.PL>


Version 0.4 -- May 15, 2000 
---------------------------
- If subject is blank, displays "(no subject)"
- Fixed a few minor bugs and typos reported to list
- Changed <? to <?php in a few places

Version 0.4pre2 -- May 5, 2000
------------------------------
- Replying sets the "Answered" flag on the original message
- When message is sent, it sends you to the folder you were looking at.
- HTML based address book search
- Made folder listing look first at subscribed folders, making it
     faster, even if you don't have $folder_prefix set.
- Fixed some bugs with default sent and trash folders
- Fixed some bugs with folder manipulating

Version 0.4pre1 -- April 29, 2000
---------------------------------
- For speed's sake, unseen messages are only noted on INBOX in left
    folder list.  This will change with 0.5.
- Optomizations, fewer IMAP calls, more efficient sorting algorithms.
- Fixed all bugs listed in BUG
- When inside the Sent folder, it displays "To" instead of "From" 
- Added ability to go to Next and Previous message while reading a message
- Caching of the message headers in mailbox (much faster)
- Added a preference that allows users to customize how many messages
     they see when they index a mailbox
- Added flag status showing on message list (Answered, Flagged, and Seen)
- Now using PHP session management
- Parsing the body for URLs and Email addrs
- Added option to configure default folder directory. ie: ~/mail
- Configuration script added: config/conf.pl
- Addressbook with LDAP support
- Big speed improvements with folder listing
- Added Subscribe/Unsubscribe to folders
- Fixed bug in UW that didn't mark unseen messages